# jiuyinzhenjing

./: .gitignore  readme.md  readme.txt
0000/C++/Fibonacci_use_stl_map/: test.cpp
0000/C++/complex_operator/: test.cpp
0000/C++/interface_src/: makefile
0000/C++/multi_class/: test.cpp
0000/C++/类的介绍/: notes.txt
0000/C语言知识/: memcpy_实现.txt
0000/C语言知识/LRU/: data.txt  test.c
0000/C语言知识/bitmap/: makefile
0000/C语言知识/callback/: Makefile  test.c
0000/C语言知识/mem2file/: read.c  st.txt  write.c
0000/C语言知识/protocol_buffer/: game.pb-c.h
0000/C语言知识/socket_clients/: client.c
0000/C语言知识/socket_mulit_clients/: server.c
0000/C语言知识/threadpool/: example.c
0000/C语言知识/tree/: demo01_BTNodeClass.cpp  demo03_二叉树的非递归算法.cpp  demo_BTHeader.h  demo_threadStruct.h
0000/C语言知识/volatile/: readme.txt
0000/C语言知识/zigzag/: readme.docx
0000/algorithm_and_struct/: 未学习的结构.txt  算法数据结构选择.txt
0000/algorithm_and_struct/bitmap/: test.c
0000/algorithm_and_struct/bitmap_int/: test.c
0000/algorithm_and_struct/c_muli_class/: test.c
0000/algorithm_and_struct/c_muli_class_yzc/: test.c
0000/algorithm_and_struct/kernel_list/: list.h
0000/algorithm_and_struct/kernel_offsetof/: test.c
0000/algorithm_and_struct/rbtree/: Makefile
0000/algorithm_and_struct/smart_pointer/: test.cpp
0000/algorithm_and_struct/this_pointer/: makefile
0000/algorithm_and_struct/各种排序算法/: 冒泡&快速排序.c  堆排序.c  简单选择排序.c
0000/cmake_learn/: CmakeLists.txt  TutorialConfig.h.in
0000/cmake_learn/src/: tutorial.cxx
0000/layer_code/: makefile
0000/layer_code/client/: client.c
0000/libevent_learn/test_01/: test.c
0000/linux-sys.zh.pdf_learn/file_IO/: note.txt
0000/linux-sys.zh.pdf_learn/filesystem/: note.txt
0000/linux-sys.zh.pdf_learn/process/: note.txt
0000/minishell/: Makefile  main.c  minishell  parse.c  parse.h
0000/shell/: checkurl.sh
0000/设计模式/: notes.txt  大话设计模式.txt
0000/设计模式/calculate/: test.cpp
0000/面试知识积累/操作系统/: 操作系统介绍.txt
0000/面试知识积累/算法/: 算法介绍.txt
0000_base_learn/C++/class_继承构造析构顺序_src/: test.cpp
0000_base_learn/C++/interface_src/: test.cpp
0000_base_learn/C++/interface_src_cmd_demo/: test.cpp
0000_base_learn/C语言知识/Big_small_stack/: test.c
0000_base_learn/C语言知识/LRU/: test.c
0000_base_learn/C语言知识/atexit_init/: test.c
0000_base_learn/C语言知识/bitmap/: test.c
0000_base_learn/C语言知识/callback/: test.c
0000_base_learn/C语言知识/mem2file/: write.c
0000_base_learn/C语言知识/protocol_buffer/: Makefile  game.pb-c.c  game.proto  notes.txt  test.c
0000_base_learn/C语言知识/socket_mulit_clients/: client.c
0000_base_learn/C语言知识/sql_match/: test.c
0000_base_learn/C语言知识/static/: static用法.txt
0000_base_learn/C语言知识/threadpool/: Makefile  thread-pool.c  thread-pool.h
0000_base_learn/C语言知识/tree/: demo03_BTN_recurrence.cpp  demo_02BTNodeClassE.cpp
0000_base_learn/C语言知识/zigzag/: test.c
0000_base_learn/linux/: linux查看线程占用率.md  linux编译内核.md  proc目录介绍.txt  编译器的工作过程.md
0000_base_learn/minishell/: Makefile
0000_base_learn/shell/: downallstudygolang.sh  nouserfile.sh
0000_base_learn/tcmalloc_use/: readme.md
0000_base_learn/设计模式/: 大话设计模式.txt  设计模式经典书籍.txt
0000_base_learn/读书笔记/: 智能时代读书笔记.txt
0000_base_learn/面试知识积累/: 编译那些事.txt
0001/dus/my_demo_code/bbssrc/: .ctm_status  ChangeLog  Makefile  configure  configure.in  configure.inf  readme.txt
0001/dus/my_demo_code/bbssrc/bbshome/: BOARDS  Version.Info  movie.1
0001/dus/my_demo_code/bbssrc/bbshome/0Announce/bbslist/: board2
0001/dus/my_demo_code/bbssrc/bbshome/0Announce/groups/GROUP_0/: .Names
0001/dus/my_demo_code/bbssrc/bbshome/0Announce/groups/GROUP_7/: .Names
0001/dus/my_demo_code/bbssrc/bbshome/0Announce/usermanual/: .Names  EGroup  Goodbye  Mail  Talk  enterbbs
0001/dus/my_demo_code/bbssrc/bbshome/etc/: boardref  firstlogin  issue  menu.ini.msia  menu.ini.org  regexpire  register  s_fill  sysops  user_full  whatdate  wmail
0001/dus/my_demo_code/bbssrc/bbshome/etc/posts/: month
0001/dus/my_demo_code/bbssrc/bbshome/help/: boardreadhelp  mainreadhelp  msghelp  userlisthelp  votehelp
0001/dus/my_demo_code/bbssrc/bbshome/table/: big5.1  big5.4  big5.6  big5.7
0001/dus/my_demo_code/bbssrc/doc/: BBCall  Firebird-30  TW_NewsGroup_List  Upgrading
0001/dus/my_demo_code/bbssrc/doc/example/: 00README  ctm.sh  expire.ctl
0001/dus/my_demo_code/bbssrc/include/: bbs.h  chat.h.in  config.h  config.h.in  site_conf.h.in  struct.h
0001/dus/my_demo_code/bbssrc/lib/libBBS/: dlm.c  fileio.c  html.c
0001/dus/my_demo_code/bbssrc/src/: Install.sh  Install.sh.in  admintool.c  bbs.c  bbsd.c  bm.c  chat.c  comm_lists.c  delete.c  expire.c  fileshm.c  goodbye.c  help.c  list.c  mail.c  modetype.c  more.c  namecomplete.c  paging.c  read.c  sendmsg.c  socket.c  station.c  stuff.c  talk.c  xyz.c
0001/dus/my_demo_code/bbssrc/util/deljunk/: deljunk.c
0001/dus/my_demo_code/bbssrc/util/express/: 00README  bigfile.c  stuff.c
0001/dus/my_demo_code/bbssrc/util/gopherd/: 00README  Makefile  gopherd.c
0001/dus/my_demo_code/bbssrc/util/in.zbbsd/: Makefile
0001/dus/my_demo_code/bbssrc/util/innbbsd/: CHANGES.nocem  INSTALL.nocem  Makefile.in  NOCEM.1  bbslink.c  wildmat.c
0001/dus/my_demo_code/bbssrc/util/innbbsd/convert/hztty/: config.h  hz2gb.c  tty.c
0001/dus/my_demo_code/bbssrc/util/innbbsd/innd/: Makefile  bntplink.in  in.bntpd.in  innbbslib.pl.in  mailpost.in  modify.doc  rfc931.pl.in
0001/dus/my_demo_code/bbssrc/util/local_utl/: Makefile  Makefile.in  bfinger.c  birthday.c  remail.c
0001/dus/my_demo_code/bbssrc/util/mail2bbs/: Makefile  Makefile.in  bbsmail.in  mail2bbs.h
0001/dus/my_demo_code/bbssrc/util/upgrade/: Makefile  chboard.c  refriend.c  rehome.c
0001/dus/my_demo_code/bbssrc/util/upgrade/include/: struct.2.5.h  struct.M2.h
0001_svn_dus/code_notes/: Docker使用手册.txt  go语言使用.txt  rb_tree.c  root修改其他用户的umask.txt  单例实现.txt  架构.txt  自己的思考.txt
0001_svn_dus/ideas/: some_idea_technique.txt
0001_svn_dus/notes/: list.txt  产品&技术分析.xlsx
0002_gosrc/go_blockchain_jeiwan/: main.go
0002_gosrc/go_layer_code/: readme.md
0002_gosrc/ipfs_learning/: base_function.go  get_env.go
0003_systemdesign/: 一般知识.md
(+902 files in other folders)
